# WebguiappTemplate

./: .clangd  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  build_ui.bat  combine.sh  espfs.paths  output_generator.sh  partitions_user_1ota_4M.csv  partitions_user_2ota_4M.csv  partitions_user_app_4M.csv  partitions_user_bt.csv  partitions_user_ota.csv  partitions_user_ota_8M.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.defaults.old  sdkconfig.old  version.txt  version_generator.sh  webguiapp.doxyfile
HTML/: adapters.html  application.html  control.html  dbg.json  dbg2.json  dmxmaster.html  dmxsettings.html  espfs.paths  gendata.json  head.inc  index.html  index20.html  index23.html  index30.html  index31.html  index40.html  info.html  ioscr.js  main.js  mem.json  reboot.html  res.js  services.html  set1.json  set2.json  set_adapters.html  set_eth.html  set_gprs.html  set_mqtt.html  set_services.html  set_sys.html  set_system.html  set_time.html  set_wifi.html  status.json  style.css  styles.css  system.html  tmr.json
WEBUI/: espfs.paths  index.html  test.json  test.txt
WEBUI_SRC/: .cproject  .project  README.md  build_ui.bat  build_ui.sh  index.html  package-lock.json  (+2 more)
main/: CMakeLists.txt  HTTPPostCustom.c  HTTPPrintCustom.c  Kconfig.projbuild  MQTTCustom.c  idf_component.yml  main.c
main/include/: AppConfiguration.h  Application.h  CronTimers.h
main/src/: AppComm.c  AppConfiguration.c  AppErr.c  CommandProcApp.c  CronTimers.c  HTTPAPICustom.c  HTTPPostCustom.c  HTTPPrintCustom.c  LedStripApp.c  MQTTCustom.c  RestApiHandlersApp.c  mDNStest.c  test.c
(+200 files in other folders)
